--- a/primary-backend/package.json
+++ b/primary-backend/package.json
@@ -10,10 +10,13 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "@types/cors": "^2.8.17",
     "@types/express": "^4.17.21",
     "cors": "^2.8.5",
     "express": "^4.19.2",
-    "typescript": "^5.5.4"
+    "prisma": "^5.18.0",
+    "typescript": "^5.5.4",
+    "zod": "^3.23.8"
   }
 }
