--- a/worker/package.json
+++ b/worker/package.json
@@ -10,7 +10,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^5.18.0",
     "kafkajs": "^2.2.4",
     "typescript": "^5.5.4"
+  },
+  "devDependencies": {
+    "prisma": "^5.18.0"
   }
 }
